# ArcaneTorrent

./: ApiKeys.md  Architecture.drawio  ChromeDriverSetup.md  README.md
arcane_torrent/: Cargo.toml  ChromeDriverSetup.md  notes.md
arcane_torrent/arctor_events/: Cargo.toml
arcane_torrent/arctor_events/src/: lib.rs
arcane_torrent/arctor_magnet_scraper/: Cargo.toml
arcane_torrent/arctor_model/: Cargo.toml
arcane_torrent/arctor_model/src/: lib.rs
arcane_torrent/arctor_model/src/builders/: mod.rs  movie_builder.rs  series_builder.rs
arcane_torrent/arctor_model/src/entities/: episode.rs  magnet.rs  mod.rs  movie.rs  person.rs  season.rs  series.rs
arcane_torrent/arctor_server/: Cargo.toml
arcane_torrent/arctor_tvdb/: ApiKeys.toml  Cargo.toml  example.json
arcane_torrent/arctor_tvdb/src/: lib.rs
arcane_torrent/arctor_tvdb/src/explorer/: mod.rs  movie_explorer.rs
arcane_torrent/arctor_tvdb/tests/: search_tests.rs  tvdb_client_tests.rs
arcane_torrent/diagrams/: dependency_graph.drawio  graph_structure.drawio
arcane_torrent/diagrams/data_structures/entities/: person.md
arcane_torrent/diagrams/data_structures/supporting_structures/: name.md
arcane_torrent/seq_diags/: rough_idea.md
arcane_torrent/src/: explorer.rs  information_extractor.rs  lib.rs  model.rs  sites.rs
arcane_torrent/src/explorer/: piratebay.rs
arcane_torrent/src/sites/: piratebay.rs
arcane_torrent/tests/: bert_experiements.rs  piratebay_tests.rs  tvdb.rs
arcane_torrent/tvdb_client/: Cargo.toml  README.md
arcane_torrent/tvdb_client/docs/: ArtworkBaseRecord.md  ArtworkExtendedRecord.md  EntityUpdate.md  FavoriteRecord.md  LoginApi.md
arcane_torrent/tvdb_client/src/apis/: artwork_api.rs  artwork_statuses_api.rs  artwork_types_api.rs  award_categories_api.rs  awards_api.rs  characters_api.rs  companies_api.rs  configuration.rs  content_ratings_api.rs  countries_api.rs  entity_types_api.rs  episodes_api.rs  favorites_api.rs  genders_api.rs  genres_api.rs  inspiration_types_api.rs  (+15 more)
(+154 files in other folders)
