[package]
name = "arcane_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

[dependencies]
scraper = "0.14.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "0.22.1", features = ["tokio-comp"] }
async-trait = "0.1.60"
thirtyfour = "0.31.0"
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }
futures = "0.3.25"
stopwatch = "0.0.7"

[[bin]]
name = "arcane_torrent_cli"
path = "src/bin/arcane_torrent_cli.rs"

[lib]
name = "arcane_torrent"
path = "src/lib.rs"
