[package]
name = "arctor_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arctor_events = { path = "../arctor_events" }
arctor_magnet_scraper = { path = "../arctor_magnet_scraper" }
arctor_model = { path = "../arctor_model" }
arctor_tvdb = { path = "../arctor_tvdb" }
bolt-client = { version = "0.11.0", features = ["tokio-stream"] }
bolt-proto = "0.12.0"
lapin = "2.1.1"
tokio = { version = "1.24.2", features = ["macros"] }
tokio-util = "0.7.4"

[[bin]]
name = "arctor_server"
path = "src/bin/arctor_server.rs"

