[package]
name = "arctor_tvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
tokio = { version = "1.24.2", features = ["macros"] }
tvdb_client = { path = "../tvdb_client" }
arctor_model = { path = "../arctor_model" }
async-trait = "0.1.63"
time = { version = "0.3.17", features = ["parsing"] }
